Fixed z-index issue

--- a/form.css
+++ b/form.css
@@ -4,9 +4,9 @@
     flex-direction: row;
     height: 100%;
     width: 100%;
-    top: 10%;
+    /* top: 10%; */
     position: absolute;
-    z-index: -2;
+    z-index: 4;
 }
 
 .form-fields {
@@ -15,7 +15,7 @@
     width: 71%;
     position: relative;
     padding-top: 5%;
-    z-index: -100;
+    z-index: 3;
 }
 
 .form-field {
@@ -23,7 +23,7 @@
     margin-bottom: 38px;
     position: relative;
     cursor: pointer;
-    z-index: -1;
+    z-index: 2;
 }
 
 .form-action-panel {
@@ -94,10 +94,11 @@
 
 /*********** Calender *********/
 .calendar-holder {
-    position: relative;
+    position: absolute;
     height: 100%;
     display: none;
-    z-index: 2;
+    width: 100%;
+    z-index: 5;
 }
 
 .calendar {
@@ -111,7 +112,7 @@
     height: 80%;
     top: 5%;
     bottom: 10%;
-    z-index: 10;
+    z-index: 6;
     box-shadow: 8px 20px 20px 10px rgba(202, 199, 199, 0.91);
     overflow: hidden;
 }
@@ -138,11 +139,14 @@
     display: flex;
     flex-direction: column;
     transition-property: left;
-    */ /* transition-duration: .5s; */
+    */
+    /* transition-duration: .5s; */
     flex-direction: column;
     transition-duration: 1s;
     position: relative;
     overflow: hidden;
+    background: white;
+    z-index: 7;
 }
 
 .calendar-footer {
@@ -165,7 +169,7 @@
     position: absolute;
     bottom: 10%;
     order: 2;
-    z-index: 100;
+    z-index: 8;
 }
 
 .calendar-week {
@@ -173,12 +177,14 @@
     flex-direction: row;
     height: 14%;
     /* width: 14%; */
+    z-index: 10;
 }
 
 .calendar-week-header {
     display: flex;
     flex-direction: row;
     height: 14%;
+    z-index: 10;
 }
 
 .calendar-nav-disp {
@@ -199,6 +205,7 @@
     transition-duration: .3s;
     flex-direction: column;
     position: absolute;
+    z-index: 100;
 }
 
 .calendar-nav-left {
@@ -224,6 +231,7 @@
     width: 14%;
     text-align: center;
     padding-top: 3%;
+    z-index: 11;
 }
 
 .selected-date {
