--- a/myweb.css
+++ b/myweb.css
@@ -125,7 +125,7 @@
     border-bottom: 1px solid black;
     width: 90%;
     cursor: pointer;
-    z-index: -15;
+    z-index: 1;
     position: relative;
 }
 
@@ -143,7 +143,7 @@
     font-weight: normal;
     color: #999;
     pointer-events: none;
-    z-index: -1;
+    z-index: 1;
 }
 
 .text-input:focus ~ .label,input:valid ~ .label {
